--- a/CFSwiftGitHubToGo/Base.lproj/Main.storyboard
+++ b/CFSwiftGitHubToGo/Base.lproj/Main.storyboard
@@ -41,6 +41,9 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eKb-HV-akx" id="c0Y-FI-MhA">
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="TNB-Sb-5Pp" kind="showDetail" identifier="SHOW_WEB_REPO" id="Om0-l2-AOI"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -75,6 +78,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Txa-IR-KlZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="895" y="362"/>
+        </scene>
+        <!--Web View Controller-->
+        <scene sceneID="bf5-mH-Wkr">
+            <objects>
+                <viewController id="TNB-Sb-5Pp" customClass="WebViewController" customModule="CFSwiftGitHubToGo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="kfU-5T-ywv"/>
+                        <viewControllerLayoutGuide type="bottom" id="CM6-Fd-TxK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4nd-h2-r52">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GlV-ma-nai" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1316" y="1319"/>
         </scene>
         <!--Users View Controller-->
         <scene sceneID="bNy-9X-KOT">
