--- a/CFSwiftGitHubToGo/Base.lproj/Main.storyboard
+++ b/CFSwiftGitHubToGo/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="r73-E0-V6p">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="r73-E0-V6p">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -168,7 +168,7 @@
                     <navigationItem key="navigationItem" id="pRM-HC-3si"/>
                     <connections>
                         <outlet property="collectionView" destination="35b-Hg-Mxb" id="pdS-Xm-L77"/>
-                        <outlet property="searchBar" destination="Ksw-U4-AKT" id="fGL-TM-8Iq"/>
+                        <outlet property="searchBar" destination="Ksw-U4-AKT" id="tiY-S3-HSx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k3I-za-z4m" userLabel="First Responder" sceneMemberID="firstResponder"/>
